syntax = "proto3";

package net.devh.boot.grpc.example;
option java_package = "net.devh.boot.grpc.examples.lib";
option java_multiple_files = true;

message IdentifyRequest {
  string token = 1;
}

message IdentifyResponse {
  bool active = 1;
  string userId = 2;
  string roles = 3;
}


service IdentifyService {
  rpc doIdentify(IdentifyRequest) returns (IdentifyResponse);
}